[gd_scene format=3 uid="uid://co3shgafa1453"]

[ext_resource type="Script" uid="uid://g2bxr0gciko0" path="res://scripts/weapon.gd" id="1_mx7cu"]
[ext_resource type="Script" uid="uid://d3vbxj4kewdkd" path="res://scripts/components/gun_stats_component.gd" id="4_3y7x1"]
[ext_resource type="Script" uid="uid://b0rwerf5w5a71" path="res://scripts/components/ammo_component.gd" id="5_o3ib6"]
[ext_resource type="PackedScene" uid="uid://yfh4gmxljhif" path="res://scenes/components/shoot_component.tscn" id="5_xrduv"]
[ext_resource type="Script" uid="uid://c0s61kpvjmsgb" path="res://scripts/components/reload_component.gd" id="6_sfxxl"]
[ext_resource type="Script" uid="uid://bbm8w6o02odwc" path="res://scripts/input_handler.gd" id="8_svrs0"]

[node name="Weapon" type="Node2D" unique_id=2141190969 node_paths=PackedStringArray("gun_stats", "ammo", "reload", "shoot", "input_handler")]
script = ExtResource("1_mx7cu")
gun_stats = NodePath("GunStatsComponent")
ammo = NodePath("AmmoComponent")
reload = NodePath("ReloadComponent")
shoot = NodePath("ShootComponent")
input_handler = NodePath("WeaponInputHandler")

[node name="GunStatsComponent" type="Node" parent="." unique_id=911641253]
script = ExtResource("4_3y7x1")

[node name="AmmoComponent" type="Node" parent="." unique_id=946289553]
script = ExtResource("5_o3ib6")

[node name="ReloadComponent" type="Node" parent="." unique_id=1885717004]
script = ExtResource("6_sfxxl")

[node name="ShootComponent" parent="." unique_id=287648724 instance=ExtResource("5_xrduv")]

[node name="WeaponInputHandler" type="Node" parent="." unique_id=482280083]
script = ExtResource("8_svrs0")
